Removed unused resources Change code following performance improvement from lint